# projector-app

./: README.md  projector-analysis.ods
clients/android/: .gitignore  settings.gradle
clients/android/app/: build.gradle
clients/python/: app.py  connection.py  crestron.py  data_names.py  handler.py  projector_app.py  ui.py
clients/rust/: Cargo.toml
clients/rust/src/: main.rs  processor.rs  projector.rs
clients/rust/src/process/: mod.rs  process.rs  processor.rs
clients/rust/src/projector/: info.rs  infocus_in2128hdx.rs  mod.rs  projector.rs
reference/: 10.4.3.60.har
reference/netcap/: projector-operation.pcapng  steps.txt
reference/scripts/Crestron/: AnalogEvent.as  CNXConnection.as  ClearAllEvent.as  ConnectEvent.as  DigitalEvent.as  DisconnectEvent.as  HeartbeatEvent.as  RepeatDigital.as  SerialEvent.as
reference/scripts/CrestronDLP/: Base64.as  DLPConfig.as  DLPSource.as  ExtendedCommand.as  StandardCommand.as
reference/scripts/CrestronUI_60K_2_fla/: AdminrMC_60.as  AnimatedBKG_59.as  CustomCheckbox_54.as  EmergencyMC_61.as  HelpDeskPopup_41.as  HorGauge_40.as  Hor_ScrollMC_37.as  IconButton_22.as  InfoPopup_56.as  LoadingMC_65.as  MainTimeline.as  MessegeMC_30.as  PowerPrompt_64.as  SendMC_43.as  ToolsPopup_50.as  UpdateCompleteMC_63.as  UserPassword_58.as  Ver_ScrollNewMC_32.as  (+3 more)
reference/site/: CrestronDLPConfig.xml  CrestronUI.swf
server/cherrypy/: local-server.py  projector.py  projector_info.py
simulator/: .gitignore  constants.py  main.py  projectorSimulator.py
simulator/sim/: projectorSimulator.py
simulator/web/: crestron.html
(+18 files in other folders)
