[package]
name = "buf-projector"
version = "0.1.0"
authors = ["Rory McLeod <mcleodnw@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumn = "0.1.13"
rand = "0.8.5"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
